# apxm

./: .envrc  .gitignore  .gitmodules  .sniff.toml  AGENTS.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  Makefile  README.md  REUSE.toml  apxm  environment.yaml  flake.nix  install.py  rust-toolchain.toml  rustfmt.toml
crates/apxm-ais/: Cargo.toml  README.md
crates/apxm-ais/src/: aam.rs  lib.rs  memory.rs  types.rs  validation.rs
crates/apxm-ais/src/operations/: category.rs  definitions.rs  metadata.rs  mod.rs  tablegen.rs
crates/apxm-ais/src/passes/: mod.rs  tablegen.rs
crates/apxm-backends/: Cargo.toml
crates/apxm-backends/prompts/: ask_system.md.jinja  plan_system.md.jinja  reason_system.md.jinja  think_system.md.jinja
crates/apxm-backends/src/llm/backends/: mock.rs  mod.rs  request.rs
crates/apxm-backends/src/llm/registry/: health.rs  mod.rs  resolver.rs
crates/apxm-backends/src/llm/schema/: mod.rs
crates/apxm-backends/src/storage/: backend.rs  memory.rs  mod.rs  sqlite.rs
crates/apxm-chat/: Cargo.toml
crates/apxm-chat/src/: commands.rs  config.rs  error.rs  lib.rs  session.rs  storage.rs  translator.rs
crates/apxm-chat/src/ui/: app.rs  frame_requester.rs  input.rs  mod.rs  render.rs
crates/apxm-cli/: Cargo.toml  README.md
crates/apxm-cli/src/: main.rs
crates/apxm-cli/src/commands/: mod.rs
crates/apxm-cli/src/commands/chat/: args.rs  driver.rs  mod.rs
crates/apxm-cli/src/commands/compile/: args.rs  driver.rs  mod.rs  output.rs  pipeline.rs  plan.rs
crates/apxm-cli/src/commands/run/: args.rs  driver.rs  mod.rs
crates/apxm-cli/tests/: cli_integration.rs
crates/apxm-compiler/: CMakeLists.txt  Cargo.toml  README.md  build.rs
crates/apxm-compiler/dsl/: README.md
crates/apxm-compiler/include/apxm/CAPI/: CodeGen.h  Compiler.h  DSL.h  Error.h  Internal.h  Module.h  PassManager.h  PassRegistry.h  Types.h
crates/apxm-compiler/include/apxm/Common/: Constants.h  ErrorDescriptor.h
crates/apxm-compiler/lib/: CMakeLists.txt
crates/apxm-compiler/lib/CAPI/: CMakeLists.txt  CodeGen.cpp  DSL.cpp  Error.cpp  Module.cpp  PassManager.cpp  PassRegistry.cpp  Types.cpp
crates/apxm-compiler/lib/Dialect/: CMakeLists.txt
crates/apxm-compiler/lib/Dialect/AIS/: CMakeLists.txt
crates/apxm-compiler/lib/Parser/AST/: AST.cpp
crates/apxm-compiler/lib/Parser/Core/: Parser.cpp
crates/apxm-compiler/lib/Parser/Lexer/: Lexer.cpp
crates/apxm-compiler/src/: lib.rs
crates/apxm-compiler/src/api/: context.rs  mod.rs  module.rs  pipeline.rs
crates/apxm-compiler/src/codegen/: artifact.rs  backend.rs  emitter.rs  mod.rs
crates/apxm-compiler/src/ffi/: conversions.rs  error.rs  mod.rs  raw.rs  utils.rs
crates/apxm-compiler/src/passes/: manager.rs  mod.rs  pipeline.rs  registry.rs
crates/apxm-core/: Cargo.toml  README.md
crates/apxm-core/src/: constants.rs  lib.rs  logging.rs  plan.rs
crates/apxm-core/src/aam/: belief.rs  capability.rs  episodic.rs  goal.rs  mod.rs  state.rs
crates/apxm-core/src/error/: api.rs  builder.rs  cli.rs  common.rs  compile.rs  compiler.rs  mod.rs  runtime.rs  security.rs  suggestion.rs
crates/apxm-core/src/memory/: episodic.rs  ltm.rs  mod.rs  space.rs  stm.rs
crates/apxm-core/src/traits/: capability.rs  executor.rs  llm.rs  mod.rs
crates/apxm-core/src/types/: config.rs  dag.rs  edge.rs  mod.rs  node.rs  number.rs  operation.rs  provider_spec.rs  token.rs  value.rs
crates/apxm-core/src/utils/: build.rs
crates/apxm-credentials/: Cargo.toml
crates/apxm-credentials/src/: credential.rs  lib.rs  mask.rs  validate.rs
crates/apxm-driver/: Cargo.toml  README.md
crates/apxm-driver/src/: cache.rs  error.rs  lib.rs
crates/apxm-driver/src/compiler/: mod.rs
crates/apxm-driver/src/config/: mod.rs
crates/apxm-driver/src/linker/: mod.rs
crates/apxm-driver/src/runtime/: capabilities.rs  inner_plan.rs  llm.rs  mod.rs
crates/apxm-linker/: Cargo.toml
crates/apxm-linker/src/: error.rs  lib.rs
crates/apxm-linker/src/compiler/: mod.rs
crates/apxm-linker/src/config/: mod.rs
crates/apxm-linker/src/linker/: mod.rs
crates/apxm-linker/src/runtime/: inner_plan.rs  llm.rs  mod.rs
crates/apxm-models/: Cargo.toml
crates/apxm-models/src/: lib.rs  provider.rs
crates/apxm-models/src/backends/: request.rs
crates/apxm-models/src/registry/: health.rs  mod.rs  resolver.rs
crates/apxm-models/src/retry/: mod.rs
crates/apxm-models/src/schema/: mod.rs
crates/apxm-prompts/: Cargo.toml
crates/apxm-prompts/prompts/: chat_system.md.jinja  inner_plan.md.jinja  plan_system.md.jinja
crates/apxm-prompts/src/: lib.rs
crates/apxm-runtime/: Cargo.toml
crates/apxm-runtime/examples/: memory_tiers.rs  simple_llm.rs
crates/apxm-runtime/src/: lib.rs  runtime.rs
crates/apxm-runtime/src/aam/: effects.rs  mod.rs
crates/apxm-runtime/src/capability/: executor.rs  flow_registry.rs  interceptor.rs  metadata.rs  mod.rs  registry.rs
crates/apxm-runtime/src/executor/: context.rs  dag_splicer.rs  dispatcher.rs  engine.rs  events.rs  inner_plan_linker.rs  mod.rs
crates/apxm-runtime/src/memory/: config.rs  episodic.rs  ltm.rs  mod.rs  stm.rs
crates/apxm-runtime/src/observability/: mod.rs
crates/apxm-runtime/src/scheduler/: concurrency_control.rs  config.rs  dataflow.rs  internal_state.rs  mod.rs  queue.rs  ready_set.rs  splicing.rs  state.rs  work_stealing.rs  worker.rs
crates/apxm-server/: Cargo.toml
crates/apxm-server/src/: main.rs
crates/apxm-storage/: Cargo.toml
crates/apxm-storage/src/: backend.rs  kv.rs  memory.rs  sqlite.rs
crates/apxm-tools/: Cargo.toml
crates/apxm-tools/src/: bash.rs  lib.rs  read.rs  web_search.rs  write.rs
crates/runtime/apxm-backends/: Cargo.toml  README.md
crates/runtime/apxm-backends/prompts/: inner_plan.md.jinja  plan_inner_system.md.jinja  plan_outer_system.md.jinja  reason_system.md.jinja  reflect_system.md.jinja
crates/runtime/apxm-backends/src/: lib.rs
crates/runtime/apxm-runtime/: Cargo.toml  README.md
crates/runtime/apxm-runtime/examples/: basic_runtime.rs  memory_tiers.rs  ollama_llm_demo.rs  substrate_demo.rs
crates/runtime/apxm-runtime/src/: lib.rs  runtime.rs
(+643 files in other folders)
