[package]
name = "apxm-ais"
version.workspace = true
edition.workspace = true
description = "Agent Instruction Set (AIS) - Single source of truth for A-PXM operations"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
