[package]
name = "apxm-backends"
version.workspace = true
edition.workspace = true
description = "APXM Backends - LLM providers, storage backends, and prompt templates"

[dependencies]
# Core dependencies
apxm-core = { version = "0.0.1", path = "../apxm-core" }

# ═══ LLM ═══

# Async runtime
async-trait = "0.1"
tokio = { version = "1.0", features = ["rt", "sync", "time"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Datetime
chrono = { version = "0.4", features = ["serde"] }

# Unique IDs
uuid = { version = "1.0", features = ["v7", "serde"] }

# Collections
dashmap = "6.0"
parking_lot = "0.12"

# Pattern matching
regex = "1.0"

# Random number generation
rand = "0.9"

# Environment
envy = "0.4"

# JSON Schema validation
jsonschema = "0.18"

# Rate limiting
governor = "0.10"

# ═══ Storage ═══

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Embedded KV store
redb = "2.0"

# ═══ Embeddings (optional) ═══

# Local embedding generation (ONNX, no Python)
fastembed = { version = "4.0", optional = true }

# ═══ Prompts ═══

# Template rendering
minijinja = "2.0"

# Compile-time directory inclusion
include_dir = "0.7"

# Utilities
once_cell = "1.0"
dirs = "5.0"

# ═══ Shared dependencies ═══

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
mockito = "1.0"
tokio-test = "0.4"

[features]
metrics = []
embeddings = ["fastembed"]
