[package]
name = "apxm-chat"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace crates
apxm-config = { path = "../apxm-config" }
apxm-prompts = { path = "../apxm-prompts" }
apxm-linker = { path = "../apxm-linker" }
apxm-models = { path = "../apxm-models" }
apxm-storage = { path = "../apxm-storage" }
apxm-core = { path = "../apxm-core" }

# Async runtime
tokio = { version = "1.48.0", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Terminal UI
crossterm = { version = "0.27", features = ["event-stream"] }
futures = "0.3"
pulldown-cmark = "0.10"
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
unicode-width = "0.1"

# Utilities
uuid = { version = "1.19.0", features = ["v7", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
dirs = "5.0"

# Logging
tracing = "0.1.43"
