[package]
name = "apxm-cli"
version = "0.1.0"
edition = "2024"
publish = false

description = "APxM CLI - minimal compile/run wrapper for the driver"

[[bin]]
name = "apxm"
path = "src/main.rs"

[dependencies]
apxm-core = { path = "../apxm-core" }
apxm-driver = { path = "../apxm-driver", optional = true }
apxm-artifact = { path = "../apxm-artifact", optional = true }
apxm-graph = { path = "../apxm-graph" }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0"
colored = "3.0"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }
apxm-credentials = { path = "../apxm-credentials" }
rpassword = "7.0"

[dev-dependencies]
tempfile = "3.0"
serde_json = "1.0"

[features]
default = []
driver = ["dep:apxm-driver", "tokio/rt-multi-thread", "dep:apxm-artifact", "dep:tracing-subscriber"]
metrics = ["driver", "apxm-driver/metrics"]
# Compile out all tracing for zero overhead (propagates through chain)
no-trace = ["apxm-driver/no-trace", "apxm-core/no-trace"]
