[package]
name = "apxm-core"
version.workspace = true
edition.workspace = true

[dependencies]
# AIS (Single Source of Truth for operations) - re-export for backward compatibility
apxm-ais = { version = "0.0.1", path = "../apxm-ais" }
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
colored = "3.0"
dashmap = "6.0"
envy = { version = "0.4", optional = true }
priority-queue = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
thiserror = "2.0"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true, features = ["serde"] }
uuid = { version = "1.0", features = ["v7"] }
which = "8.0"
dirs = "5.0"

[features]
tracing-subscriber = ["dep:tracing-subscriber"]
envy = ["dep:envy"]
# Compile out all tracing macros for zero overhead in production/benchmark builds
no-trace = []
