[package]
name = "apxm-credentials"
version.workspace = true
edition.workspace = true
publish = false
description = "APXM credential store - plaintext TOML-based API key management"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
dirs = "5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["macros"] }
rpassword = "7"
tempfile = "3"
