[package]
name = "apxm-credentials"
version.workspace = true
edition.workspace = true
publish = false
description = "APXM credential store - plaintext TOML-based API key management"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "2.0"
dirs = "5.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.0", features = ["macros"] }
rpassword = "7.0"
tempfile = "3.0"
