[package]
name = "apxm-driver"
version = "0.1.0"
edition = "2024"
publish = false
description = "APxM Driver - Configuration, linker, and orchestration for compiler/runtime"

[dependencies]
# Core dependencies
apxm-core = { path = "../apxm-core" }
apxm-compiler = { path = "../apxm-compiler" }
apxm-runtime = { path = "../apxm-runtime" }
apxm-artifact = { path = "../apxm-artifact" }
apxm-backends = { path = "../apxm-backends" }
apxm-tools = { path = "../apxm-tools" }
apxm-graph = { path = "../apxm-graph" }
apxm-credentials = { path = "../apxm-credentials" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }
async-trait = "0.1"

# Utilities
thiserror = "2.0"
dirs = "5.0"
sha2 = "0.10"
tempfile = "3.0"
parking_lot = "0.12"
tracing = "0.1"

[features]
metrics = ["apxm-runtime/metrics", "apxm-backends/metrics"]
# Compile out all tracing for zero overhead (propagates through chain)
no-trace = ["apxm-runtime/no-trace", "apxm-core/no-trace"]
