[package]
name = "apxm-linker"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
apxm-core = { path = "../apxm-core" }
apxm-compiler = { path = "../apxm-compiler" }
apxm-config = { path = "../apxm-config" }
apxm-runtime = { path = "../apxm-runtime" }
apxm-artifact = { path = "../apxm-artifact" }
apxm-models = { path = "../apxm-models" }
thiserror = "1.0"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1.43"
tempfile = "3.3"
serde_json = "1.0"
