[package]
name = "apxm-models"
version.workspace = true
edition.workspace = true

[dependencies]
# Core dependencies
apxm-core = { version = "0.0.1", path = "../apxm-core" }

# Async runtime
async-trait = "0.1.89"
tokio = { version = "1.41", features = ["rt", "sync", "time"] }

# HTTP client
reqwest = { version = "0.12.26", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"

# Datetime
chrono = { version = "0.4.42", features = ["serde"] }

# Unique IDs
uuid = { version = "1.19.0", features = ["v7", "serde"] }

# Error handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Logging
tracing = "0.1.43"

# Collections
dashmap = "6.1.0"
parking_lot = "0.12"

# Pattern matching
regex = "1.11"

# Random number generation
rand = "0.9.2"

# Environment
envy = "0.4.2"

# JSON Schema validation
jsonschema = "0.18"

# Rate limiting
governor = "0.10"
openssl = { version = "0.10.75", features = ["vendored"] }

[dev-dependencies]
tokio = { version = "1.41", features = ["full"] }
mockito = "1.6"
tokio-test = "0.4"
