[package]
name = "apxm-prompts"
version = "0.1.0"
edition = "2024"

[dependencies]
# Template rendering
minijinja = "2.8.0"

# Compile-time directory inclusion
include_dir = "0.7"

# Serialization for context data
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Utilities
once_cell = "1.21.3"

# Logging
tracing = "0.1.43"
apxm-core = { version = "0.0.1", path = "../apxm-core" }
