[package]
name = "apxm-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
crossbeam-deque = "0.8.6"
dashmap = { version = "6.1.0", optional = true }
fxhash = { version = "0.2.1", optional = true }
once_cell = "1.21.3"
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
smallvec = { version = "1.15.1", optional = true }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1.43"
uuid = { version = "1.19.0", features = ["v7"] }

[features]
dashmap = ["dep:dashmap"]
fxhash = ["dep:fxhash"]
smallvec = ["dep:smallvec"]
