[package]
name = "apxm-server"
version = "0.1.0"
edition = "2024"
description = "HTTP API wrapper for APXM runtime"

[dependencies]
apxm-artifact = { path = "../runtime/apxm-artifact" }
apxm-core = { path = "../runtime/apxm-core" }
apxm-graph = { path = "../apxm-graph" }
apxm-runtime = { path = "../runtime/apxm-runtime", features = ["metrics"] }

anyhow = "1"
async-trait = "0.1"
async-stream = "0.3"
axum = { version = "0.7", features = ["json"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "signal"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
