[package]
name = "apxm-storage"
version.workspace = true
edition.workspace = true

[dependencies]
apxm-core = { path = "../apxm-core" }

# Async runtime
tokio = { version = "1.48.0", features = ["rt", "sync"] }
async-trait = "0.1.89"

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }

# Serialization
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
redb = "2.6.3"


[dev-dependencies]
tokio = { version = "1.48.0", features = ["full", "test-util"] }
