[package]
name = "apxm-tools"
version.workspace = true
edition.workspace = true

[dependencies]
apxm-core = { path = "../runtime/apxm-core" }
apxm-runtime = { path = "../runtime/apxm-runtime" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["process", "fs", "time"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = true }
