[package]
name = "apxm-backends"
version.workspace = true
edition.workspace = true
description = "APXM Backends - LLM providers, storage backends, and prompt templates"

[dependencies]
# Core dependencies
apxm-core = { version = "0.0.1", path = "../apxm-core" }

# ═══ LLM ═══

# Async runtime
async-trait = "0.1.89"
tokio = { version = "1.48.0", features = ["rt", "sync", "time"] }

# HTTP client
reqwest = { version = "0.12.26", features = ["json", "stream"] }

# Datetime
chrono = { version = "0.4.42", features = ["serde"] }

# Unique IDs
uuid = { version = "1.19.0", features = ["v7", "serde"] }

# Collections
dashmap = "6.1.0"
parking_lot = "0.12"

# Pattern matching
regex = "1.11"

# Random number generation
rand = "0.9.2"

# Environment
envy = "0.4.2"

# JSON Schema validation
jsonschema = "0.18"

# Rate limiting
governor = "0.10"
openssl = { version = "0.10.75", features = ["vendored"] }

# ═══ Storage ═══

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }

# Embedded KV store
redb = "2.6.3"

# ═══ Embeddings (optional) ═══

# Local embedding generation (ONNX, no Python)
fastembed = { version = "4", optional = true }

# ═══ Prompts ═══

# Template rendering
minijinja = "2.8.0"

# Compile-time directory inclusion
include_dir = "0.7"

# Utilities
once_cell = "1.21.3"
dirs = "5"

# ═══ Shared dependencies ═══

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"

# Error handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Logging
tracing = "0.1.43"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full", "test-util"] }
mockito = "1.6"
tokio-test = "0.4"

[features]
metrics = []
embeddings = ["fastembed"]
