[package]
name = "apxm-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal dependencies
apxm-core = { path = "../apxm-core" }
apxm-backends = { path = "../apxm-backends" }
apxm-artifact = { path = "../apxm-artifact" }

# Async runtime
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "sync", "time", "rt"] }
async-trait = "0.1"

# Concurrency
crossbeam-deque = "0.8.6"
dashmap = { version = "6.1.0", optional = true }
parking_lot = "0.12.5"

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Observability
tracing = "0.1.43"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

# Utilities
once_cell = "1.21.3"
uuid = { version = "1.19.0", features = ["v7"] }
fxhash = { version = "0.2.1", optional = true }
smallvec = { version = "1.15.1", optional = true }
chrono = "0.4"
num_cpus = "1.16"
priority-queue = "1.3"

# Terminal output
termimad = "0.30"

[dev-dependencies]
apxm-driver = { path = "../../apxm-driver" }

[features]
default = ["dashmap", "fxhash"]
dashmap = ["dep:dashmap"]
fxhash = ["dep:fxhash"]
smallvec = ["dep:smallvec"]
metrics = ["apxm-backends/metrics"]
# Compile out all tracing for zero overhead (propagates to apxm-core)
no-trace = ["apxm-core/no-trace"]

[[example]]
name = "paper_benchmarks"
path = "../../../papers/cf26/benchmarks/runtime/paper_benchmarks.rs"

